--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section class="container mt-5">
     <h2>Últimas Publicaciones</h2>
     <div class="card mb-4">
-        <img src="imagenes/img1.jpg" class="card-img-top" alt="...">
+        <img src="img1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Introducción a HTML</h5>
             <p class="card-text">Aprende lo básico de HTML y cómo empezar a crear páginas web.</p>
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="card mb-4">
-        <img src="imagenes/img2.jpg" class="card-img-top" alt="...">
+        <img src="img2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Guía de CSS para Principiantes</h5>
             <p class="card-text">Descubre los fundamentos de CSS y cómo dar estilo a tus páginas web.</p>
